[package]
name = "twitch_notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.11", features = ["json"] }
twitch_api2 = "0.6.1"
twitch-irc = "5.0.0"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"